ENet 1.3.17 (November 15, 2020):

* fixes for sender getting too far ahead of receiver that can cause instability with reliable packets

ENet 1.3.16 (September 8, 2020):

* fix bug in unreliable fragment queuing
* use single output queue for reliable and unreliable packets for saner ordering
* revert experimental throttle changes that were less stable than prior algorithm

ENet 1.3.15 (April 20, 2020):

* quicker RTT initialization
* use fractional precision for RTT calculations
* fixes for packet throttle with low RTT variance
* miscellaneous socket bug fixes

ENet 1.3.14 (January 27, 2019):

* bug fix for enet_peer_disconnect_later()
* use getaddrinfo and getnameinfo where available
* miscellaneous cleanups

ENet 1.3.13 (April 30, 2015):

* miscellaneous bug fixes
* added premake and cmake support
* miscellaneous documentation cleanups

ENet 1.3.12 (April 24, 2014):

* added maximumPacketSize and maximumWaitingData fields to ENetHost to limit the amount of 
data waiting to be delivered on a peer (beware that the default maximumPacketSize is
32MB and should be set higher if desired as should maximumWaitingData)

ENet 1.3.11 (December 26, 2013):

* allow an ENetHost to connect to itself
* fixed possible bug with disconnect notifications during connect attempts
* fixed some preprocessor definition bugs

ENet 1.3.10 (October 23, 2013);

* doubled maximum reliable window size
* fixed RCVTIMEO/SNDTIMEO socket options and also added NODELAY

ENet 1.3.9 (August 19, 2013):

* added duplicatePeers option to ENetHost which can limit the number of peers from duplicate IPs
* added enet_socket_get_option() and ENET_SOCKOPT_ERROR
* added enet_host_random_seed() platform stub

ENet 1.3.8 (June 2, 2013):

* added enet_linked_version() for checking the linked version 
* added enet_socket_get_address() for querying the local address of a socket
* silenced some debugging prints unless ENET_DEBUG is defined during compilation