@@ -1,3 +1,12 @@
+ENet 1.3.18 (April 14, 2024):
+
+* Packet sending performance improvements
+* MTU negotiation fixes
+* Checksum alignment fix
+* No more dynamic initialization of checksum table
+* ENET_SOCKOPT_TTL
+* Other miscellaneous small improvements
+
 ENet 1.3.17 (November 15, 2020):
 
 * fixes for sender getting too far ahead of receiver that can cause instability with reliable packets
